5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4129/executions/1800_2564.log
== TEST (2019-06-05 15:17:42) 
-- CODE:
from numpy import*

g = array(eval(import("Gols marcados: ")))
s = array(eval(import("Gols sofridos: ")))

a = zeros(size(g), dtype=int)

print(a)
-- ERROR:
File "XXXX", line 3
    g = array(eval(import("Gols marcados: ")))
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 15:18:16) 
-- CODE:
from numpy import*

g = array(eval(input("Gols marcados: ")))
s = array(eval(input("Gols sofridos: ")))

a = zeros(size(g), dtype=int)

print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:22:08) 
-- CODE:
from numpy import*

m = array(eval(input("Gols marcados: ")))
s = array(eval(input("Gols sofridos: ")))

a = zeros(3, dtype=int)

v = 0
d = 0
e = 0

for x in range(m):
	if(m[x] > s[x]):
		v = v + 1
	elif(m[x]< s[x]):
		d = d + 1
	else:
		e = e + 1
a[1] = v
a[2] = e
a[3] = d

print(a)

	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:23:27) 
-- CODE:
from numpy import*

m = array(eval(input("Gols marcados: ")))
s = array(eval(input("Gols sofridos: ")))

a = zeros(3, dtype=int)

v = 0
d = 0
e = 0

for x in range(size(m)):
	if(m[x] > s[x]):
		v = v + 1
	elif(m[x]< s[x]):
		d = d + 1
	else:
		e = e + 1
a[1] = v
a[2] = e
a[3] = d

print(a)

	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:24:43) 
-- CODE:
from numpy import*

m = array(eval(input("Gols marcados: ")))
s = array(eval(input("Gols sofridos: ")))

a = zeros(3, dtype=int)

v = 0
d = 0
e = 0

for x in range(size(m)):
	if(m[x] > s[x]):
		a[1] = v + 1
	elif(m[x]< s[x]):
		a[3] = d + 1
	else:
		a[2] = e + 1


print(a)

	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:25:10) 
-- CODE:
from numpy import*

m = array(eval(input("Gols marcados: ")))
s = array(eval(input("Gols sofridos: ")))

a = zeros(3, dtype=int)

v = 0
d = 0
e = 0

for x in range(size(m)):
	if(m[x] > s[x]):
		a[0] = v + 1
	elif(m[x]< s[x]):
		a[2] = d + 1
	else:
		a[1] = e + 1


print(a)

	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:25:49) 
-- CODE:
from numpy import*

m = array(eval(input("Gols marcados: ")))
s = array(eval(input("Gols sofridos: ")))

a = zeros(3, dtype=int)

v = 0
d = 0
e = 0

for x in range(size(m)):
	if(m[x] > s[x]):
		v = v + 1
	elif(m[x]< s[x]):
		d = d + 1
	else:
		e = e + 1
a[0] = v
a[1] = e
a[2] = d

print(a)

	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 10:26:20) 
-- CODE:
from numpy import*

m = array(eval(input("Gols marcados: ")))
s = array(eval(input("Gols sofridos: ")))

a = zeros(3, dtype=int)

v = 0
d = 0
e = 0

for x in range(size(m)):
	if(m[x] > s[x]):
		v = v + 1
	elif(m[x]< s[x]):
		d = d + 1
	else:
		e = e + 1
a[0] = v
a[1] = e
a[2] = d

print(a)

	
		
-- EXECUTION TIME:
0.92321
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[7 3 2]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[12  1  0]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
